<resources>
    <string name="app_name">RegObar</string>
    <string name="name">Name: </string>
    <string name="createAc">Create Account</string>
    <string name="phone_number">Phone Number: </string>
    <string name="regbutton">Register</string>
    <string name="welcome">Welcome</string>
    <string name="story">Please input your details into the fields below to register your details</string>
    <string name="email">E-mail: </string>
    <string name="sex">Sex:</string>
    <string-array name="sexlist">
        <item>Male</item>
        <item>Female</item>
        <item>Non-Binary</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>