<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainConst"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E18888"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/q" />

    <EditText
        android:id="@+id/emailad"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/full_rounded_corners_white"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="32dp"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNum" />

    <EditText
        android:id="@+id/phoneNum"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/full_rounded_corners_white"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:paddingHorizontal="32dp"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/createAc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif-monospace"
        android:text="@string/createAc"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.24000001" />

    <EditText
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/full_rounded_corners_white"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:paddingHorizontal="32dp"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createAc" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/full_rounded_corners_white"
        android:clipToPadding="true"
        android:entries="@array/sexlist"
        android:paddingStart="8dp"
        android:prompt="@string/sex"
        android:scrollbarSize="4dp"
        android:tooltipText="@string/sex"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailad" />

    <TextView
        android:id="@+id/sextext"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:fontFamily="monospace"
        android:text="Sex:"
        android:textColor="@color/textColor"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="@+id/spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/spinner" />

    <Button
        android:id="@+id/reg_button"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="84dp"
        android:background="@drawable/full_rounded_corners"
        android:text="@string/regbutton"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/spinner"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="@+id/sextext"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />
</androidx.constraintlayout.widget.ConstraintLayout>